Update _config.yml added sidebar short bio

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "img_2.jpg"
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Physicist, Audiologist, and Dad"
   location         : "Austria"
   employer         : "Medical University of Innsbruck"
   uri              : # URL
