--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "stanissse.github.io/AboutMe"
 author:
   # Biographic information
   avatar           : "img_2.jpg"
-  name             : "Your Sidebar Name"
+  name             : "Philipp"
   pronouns         : # example: "she/her"  
   bio              : "Physicist, Audiologist, and Dad"
   location         : "Austria"
