--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Philipp Zelger PhD"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Philipp Zelger"
 description              : &description "personal description"
 url                      : https://Stanissse.github.io/AboutMe # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -46,7 +46,7 @@ author:
   #bitbucket        : # Username - Update with your username on the site
   #codepen          : # Username
   #dribbble         : # Username
-  github           : "https://stanissse.github.io/AboutMe/"
+  #github           : "https://stanissse.github.io/AboutMe/"
   #kaggle           : # Username  
   #stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
