--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   # Academic websites
   academia         : # URL
   #arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=7QShYdwAAAAJ&hl=en&oi=ao"
   #impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-6543-7620"
   #semantic         : # URL
